# Otus-CPP-BN

./: CMakeLists.txt  README.md
Homework#2/: Otus-CPP-BN.h  hello_world.cpp  todo_move_me_out.cpp
Homework#3/: argument.cpp
Homework#4/: Ball.cpp  Ball.hpp  CMakeSettings.json
Homework2/: Otus-CPP-BN.cpp
Homework3/: game.cpp
Homework4/: Ball.cpp  Ball.hpp  CMakeLists.txt  CMakeSettings.json  Dust.cpp  Dust.hpp  Physics.cpp  Physics.hpp  World.cpp  World.hpp  cmake-output.txt
Otus-CPP-BN/: CMakeLists.txt  todo_me_out.cpp
